--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
   (n'inclut pas les films américains et français, vus en grand nombre)
   <pre style="font-size: 20px;line-height: 32px;">████████████████████████████████████ 36 🇬🇧
 ███████████████████████████ 27 🇯🇵
-█████████████████ 17 🇪🇸 🇩🇪
+█████████████████ 17 🇩🇪 🇪🇸
 █████████████ 13 🇮🇹
 ████████████ 12 🇰🇷
-███████ 7 🇲🇽 🇷🇺
-██████ 6 🇭🇰 🇩🇰
-█████ 5 🇨🇳 🇮🇳 🇹🇷
+███████ 7 🇷🇺 🇲🇽
+██████ 6 🇩🇰 🇮🇷 🇭🇰
+█████ 5 🇮🇳 🇨🇳 🇹🇷
 ████ 4 🇸🇪
-███ 3 🇵🇱 🇧🇪 🇮🇪 🇮🇷 🇨🇱
+███ 3 🇵🇱 🇧🇪 🇮🇪 🇨🇱
 ██ 2 🇹🇭 🇦🇷 🇮🇸 🇿🇦
 █ 1 🇳🇴 🇰🇿 🇧🇷 🇫🇮 🇮🇱 🇬🇷 🇨🇦 🇮🇩 🇬🇪 🇳🇿 🇦🇺 🇸🇬 🇱🇧 🇦🇹 🇸🇳 🇧🇹 🇺🇾 🇵🇪 🇷🇴 🇨🇴</pre>
 </details>
@@ -385,7 +385,7 @@
 1998: ██████████ 10
 1999: ███████████████████ 19
 2000: █████████████████ 17
-2001: █████████████ 13
+2001: ██████████████ 14
 2002: ███████████████ 15
 2003: █████████████████████ 21
 2004: ███████████████████████████ 27
@@ -397,20 +397,20 @@
 2010: █████████████████████████████ 29
 2011: ██████████████████████████████ 30
 2012: ████████████████████████ 24
-2013: ███████████████████████████████████ 35
-2014: █████████████████████████████████ 33
-2015: ████████████████████ 20
+2013: ████████████████████████████████████ 36
+2014: ████████████████████████████████ 32
+2015: █████████████████████ 21
 2016: █████████████████████████ 25
 2017: ██████████████████████████ 26
-2018: ███████████████████████████████████ 35
-2019: █████████████████████████████ 29
+2018: ████████████████████████████████████ 36
+2019: ██████████████████████████████ 30
 2020: █████████████████ 17
 2021: ████████████████████████ 24
 2022: ████████████████████████████████ 32
-2023: ███████████████████████████████████████████████████████ 55
+2023: ██████████████████████████████████████████████████████████ 58
 2024:  0
 
-total: 1010</pre>
+total: 1017</pre>
 </details>
 </span><h2 class="heading-element">Mon top 15 films préférés</h2>
 <a id="user-content-mon-top-15-films-préférés" class="anchor" aria-label="Permalink: Mon top 15 films préférés" href="#mon-top-15-films-pr%C3%A9f%C3%A9r%C3%A9s"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -1462,7 +1462,7 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//wFSpyMsp7H0ttERbxY7Trlv8xry.jpg");' onmouseleave='setPosterPath("");'>Monsters, Inc. (Pixar)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gQHBLxJmakVO1h7VnTHwnVplXZs.jpg");' onmouseleave='setPosterPath("");'>The Man Who Wasn't There (frères Coen)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//9QOzFL3FPMAUNNPrNiKC3mEDxco.jpg");' onmouseleave='setPosterPath("");'>The Pledge (Sean Penn, Jack Nicholson) #thriller</li>
-<li>bof: Y tu mamá también (Alfonso Cuarón) 🇲🇽, <del>Vanilla Sky (Cameron Crowe)</del>
+<li>bof: Y tu mamá también (Alfonso Cuarón) 🇲🇽, <del>Donnie Darko</del>, <del>Vanilla Sky (Cameron Crowe)</del>
 </li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/27e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#C%C3%A9sar_du_meilleur_film" rel="noopener" target="_blank">Césars 27</a></p>
@@ -1666,7 +1666,7 @@ total: 1010</pre>
 <p><a href="https://fr.wikipedia.org/wiki/33e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film_fran%C3%A7ais" rel="noopener" target="_blank">Césars 33</a></p>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//3MJUo4bCPai5r9zrw7nTS8sVzQ7.jpg");' onmouseleave='setPosterPath("");'>Le Scaphandre et le Papillon 🏆</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aU8i2QAdTyRR1nYb36Gq51xXP8p.jpg");' onmouseleave='setPosterPath("");'>Persépolis</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aU8i2QAdTyRR1nYb36Gq51xXP8p.jpg");' onmouseleave='setPosterPath("");'>Persépolis 🇮🇷</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//fd6zXkOa3LOxOrtywrB4Nhz6N.jpg");' onmouseleave='setPosterPath("");'>La Graine et le Mulet</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8yj6tkyp7dvdzkkIasX2SUmZd81.jpg");' onmouseleave='setPosterPath("");'>99 Francs</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//hVBndYreVtlBhIb0K4uSwmnGVSf.jpg");' onmouseleave='setPosterPath("");'>Louise-Michel (Délépine et Kervern) <a href="https://www.telerama.fr/cinema/films/louise-michel,359692.php" rel="noopener" target="_blank">📰</a> ☀️</li>
@@ -1883,6 +1883,7 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//koXGRfatN0tURFWMA0Keb0p0Gtg.jpg");' onmouseleave='setPosterPath("");'>American Hustle (Christian Bale, Amy Adams, Bradley Cooper, Jennifer Lawrence)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jSOiz1h97i3qwjZJXY8SeLvjPsl.jpg");' onmouseleave='setPosterPath("");'>The Lunchbox 🇮🇳</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jNKUXcwZr1vpgq7sGTCEqdngo4Z.jpg");' onmouseleave='setPosterPath("");'>Tangerines 🇬🇪</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8nff89qjYN3Hck5G33xeRPsM8TZ.jpg");' onmouseleave='setPosterPath("");'>Le Passé (Asghar Farhadi) 🇮🇷</li>
 <li>bof: Inside Llewyn Davis (frères Coen), All is Lost (Robert Redford), Nosotros los Nobles 🇲🇽, Only God Forgives (Nicolas Winding Refn), The Immigrant (James Gray), <del>The Wolf of Wall Street (Martin Scorsese)</del>, <del>Jobs</del>, <del>Fruitvale Station</del> ☀️, <del>The Best Offer</del>, <del>Blue Jasmine</del>
 </li>
 </ul>
@@ -1907,7 +1908,6 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//rTEYxSDo9aJTTbM0zuMMLgzJcUJ.jpg");' onmouseleave='setPosterPath("");'>Reality (Quentin Dupieux, Alain Chabat)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//hyan5Uc0lGpPuad94DM1pLxneiP.jpg");' onmouseleave='setPosterPath("");'>Inherent Vice (Paul Thomas Anderson, Joaquin Phoenix)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//sJNcoyKsqYGEFCCNsYsccikGePV.jpg");' onmouseleave='setPosterPath("");'>Leviathan 🇷🇺</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//4ririIPMbOnbnZlQGnTYgDIcbxa.jpg");' onmouseleave='setPosterPath("");'>A Girl Walks Home Alone at Night 🇮🇷</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jH3851P2DjjnBsrjphbR1CWRzm6.jpg");' onmouseleave='setPosterPath("");'>Dear White People ☀️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jBsYWNBYNEi5EhT1hC8iexcTsWT.jpg");' onmouseleave='setPosterPath("");'>Coming Home (Zhang Yimou) 🇨🇳</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//trtD17IqSWV9Nbn4OILztc9GuCX.jpg");' onmouseleave='setPosterPath("");'>Noah (Darren Aronofsky, Russell Crowe)</li>
@@ -1950,6 +1950,7 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//v28hwu0wOhzPfhKfhnI7vZkRDxi.jpg");' onmouseleave='setPosterPath("");'>Manifesto (Cate Blanchett)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ectQ2KTCfwhRVsiLQMxONUilOgf.jpg");' onmouseleave='setPosterPath("");'>Il est de retour 🇩🇪 #satire</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//5LrI4GiCSrChgkdskVZiwv643Kg.jpg");' onmouseleave='setPosterPath("");'>Mad Max: Fury Road</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//pZf8wgEZOpTKte43MFwH44tb2x8.jpg");' onmouseleave='setPosterPath("");'>Taxi Téhéran 🇮🇷</li>
 <li>bof: <del>The Martian</del>, <del>A Bigger Splash</del>
 </li>
 </ul>
@@ -2056,7 +2057,7 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//bMws6ZcTwEynkst5PU3Z8OD9wiH.jpg");' onmouseleave='setPosterPath("");'>Mademoiselle de Joncquières : comédie dramatique romantique, sympa mais pas inoubliable</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//5UsjIbxJWRiSAfdeC4AhlJEFtRm.jpg");' onmouseleave='setPosterPath("");'>Le Retour du héros (Jean Dujardin, Mélanie Laurent) : comédie sympa sans prétention</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//zsGYDF6nRC8RsT1MnQTrH2IMVDC.jpg");' onmouseleave='setPosterPath("");'>Le Grand Bain (Gilles Lellouche) : comédie "feel good" sans prétention</li>
-<li>bof: Un peuple et son Roi <a href="https://www.telerama.fr/cinema/films/un-peuple-et-son-roi-1-119520436.php" rel="noopener" target="_blank">📰</a>
+<li>bof: Au poste ! (Quentin Dupieux), Un peuple et son Roi <a href="https://www.telerama.fr/cinema/films/un-peuple-et-son-roi-1-119520436.php" rel="noopener" target="_blank">📰</a>
 </li>
 </ul>
 <div class="markdown-heading">
@@ -2091,7 +2092,7 @@ total: 1010</pre>
 <li>Le Nom de la Terre</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//m0EmaEJmB02iIBA1YWQZGYVLBjA.jpg");' onmouseleave='setPosterPath("");'>La Vie Scolaire #film-scolaire</li>
 <li>La Belle Époque (Nicolas Bedos, Daniel Auteuil, Guillaume Canet)</li>
-<li>bof: Les Misérables, Liberté (Albert Serra) 🎥 🌿</li>
+<li>bof: Le Daim (Quentin Dupieux), Les Misérables, Liberté (Albert Serra) 🎥 🌿</li>
 </ul>
 <p><a href="https://www.telerama.fr/festival-de-cannes/2019/cannes-2019-voici-le-programme-des-films-en-competition,n6238497.php" rel="noopener" target="_blank">Cannes 2019 - toutes les notes télérama</a></p>
 <div class="markdown-heading">
@@ -2214,7 +2215,8 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//oWlujFryYpoogVwKhAnnHOV9Uis.jpg");' onmouseleave='setPosterPath("");'>L'Astronaute <a href="https://www.telerama.fr/cinema/films/l-astronaute-1-218245043.php" rel="noopener" target="_blank">📰</a> : la fin vend le film, sinon c'est un peu vide</li>
 <li>bof:
 <ul>
-<li>Novembre, En Corps (Klapisch), Coupez ! (Michel Hazanavicius), La Montagne, Pacifiction - tourment sur les îles, Les Pires</li>
+<li>Novembre, En Corps (Klapisch), Coupez ! (Michel Hazanavicius), La Montagne, Pacifiction - tourment sur les îles, Les Pires, <del>Fumer fait tousser (Quentin Dupieux)</del>
+</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//s8B0GsFEebd0DW2spykLMxnc1Kn.jpg");' onmouseleave='setPosterPath("");'>Athena (Romain Gavras) : quelques plans iconiques pour un scénario très vide</li>
 </ul>
 </li>
@@ -2261,6 +2263,7 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kCGlIMHnOm8JPXq3rXM6c5wMxcT.jpg");' onmouseleave='setPosterPath("");'>Poor Things (Yórgos Lánthimos) <span title="❝ The unthinkable happened to the last film Yorgos Lanthimos directed: it became a hit. The highly eccentric and challenging moviemaker went from years in the indie film trenches to something sellable with 2018’s “The Favourite,” which didn’t dilute his love of mischief and the macabre. He connected with viewers in a new way, giving his career a marketplace and financial boost, and Lanthimos chooses to cash in with “Poor Things”. ❞">💡</span>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//rTEYxSDo9aJTTbM0zuMMLgzJcUJ.jpg");' onmouseleave='setPosterPath("");'>Reality</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//9OvSeMHed2zENuoxI7YWMvvkQS2.jpg");' onmouseleave='setPosterPath("");'>LaRoy, Texas</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aviJMFZSnnCAsCVyJGaPNx4Ef3i.jpg");' onmouseleave='setPosterPath("");'>All of us Strangers 🇬🇧</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kxnA3EwH7t6ZSYceBIl3Pw8rzF4.jpg");' onmouseleave='setPosterPath("");'>Les Colons 🇨🇱</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//k7rEpZfNPB35FFHB00ZhXHKTL7X.jpg");' onmouseleave='setPosterPath("");'>La Sociedad de la Nieve 🇺🇾</li>
@@ -2285,6 +2288,7 @@ total: 1010</pre>
 </ul>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//tq8x5F17q95T1j0up5rpzXFAylN.jpg");' onmouseleave='setPosterPath("");'>Sharper : intrigue basique mais très esthétique</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//qhb1qOilapbapxWQn9jtRCMwXJF.jpg");' onmouseleave='setPosterPath("");'>Wonka (Timothée Chalamet)</li>
 <li>bof: Totem 🇲🇽, The Zone of Interest 🇩🇪, Scrapper 🇬🇧 ☀️, Are You There God? It's Me Margaret #coming-of-age, Passages, The Killer (David Fincher), Saltburn, La Salle des Profs 🇩🇪, Strange Way of Life (Almodóvar), Il Boemo, The Fabelmans</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/49e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 49</a></p>
@@ -2298,7 +2302,7 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ptJWIUOm3aA15rjz5SJJwS6WJU4.jpg");' onmouseleave='setPosterPath("");'>Je verrai toujours vos visages (Jeanne Herry)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//56vAJbfNGZeq3pJtG7LhmAMgfTL.jpg");' onmouseleave='setPosterPath("");'>La Bête dans la jungle <a href="https://www.telerama.fr/cinema/la-bete-dans-la-jungle-attention-film-culte-en-devenir_cri-7027824.php" rel="noopener" target="_blank">📰</a>
 </li>
-<li>bof: La Passion de Dodin Bouffant, Chien de la Casse, Retour à Séoul, Le Règne animal (Romain Duris), Vampire humaniste cherche suicidaire consentant (Québec), Mon Crime (François Ozon), Une année difficile</li>
+<li>bof: La Passion de Dodin Bouffant, Chien de la Casse, Yannick (Quentin Dupieux), Retour à Séoul, Le Règne animal (Romain Duris) 5✨, Vampire humaniste cherche suicidaire consentant (Québec), Mon Crime (François Ozon), Une année difficile</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="2024">2024 <a href="#top">↑</a>
@@ -2387,6 +2391,7 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//wVYREutTvI2tmxr6ujrHT704wGF.jpg");' onmouseleave='setPosterPath("");'>The Conjuring (2013)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//qt3fqapeo94TfvMyld8P7gkpXLz.jpg");' onmouseleave='setPosterPath("");'>The Babadook (2014)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//iwnQ1JH1wdWrGYkgWySptJ5284A.jpg");' onmouseleave='setPosterPath("");'>It Follows (2014)</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//4ririIPMbOnbnZlQGnTYgDIcbxa.jpg");' onmouseleave='setPosterPath("");'>A Girl Walks Home Alone at Night (2014) 🇮🇷</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//zap5hpFCWSvdWSuPGAQyjUv2wAC.jpg");' onmouseleave='setPosterPath("");'>The Witch (2015, Robert Eggers) ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//liI4c3GYaKuAo4FsCF4RKvFFqbV.jpg");' onmouseleave='setPosterPath("");'>Better Watch Out (2016)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//nAU74GmpUk7t5iklEp3bufwDq4n.jpg");' onmouseleave='setPosterPath("");'>A Quiet Place (2018) (John Krasinski)</li>
@@ -2398,6 +2403,7 @@ total: 1010</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//971Kqs1q4nuSc9arn1QAuKYbfxy.jpg");' onmouseleave='setPosterPath("");'>Scream (2022)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kdPMUMJzyYAc4roD52qavX0nLIC.jpg");' onmouseleave='setPosterPath("");'>Talk to Me (2023) ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//dqtAOLQ8KqAYoZckYY9j99NNr9K.jpg");' onmouseleave='setPosterPath("");'>You'll Never Find Me (2023) ❤️</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//u3YQJctMzFN2wAvnkmXy41bXhFv.jpg");' onmouseleave='setPosterPath("");'>Late Night with the Devil (2023)</li>
 </ul>
 <p><a href="https://loadingartist.com/comic/horror-movie/" rel="noopener" target="_blank">bonus: gag</a></p>
 <div class="markdown-heading">
