--- a/index.html
+++ b/index.html
@@ -315,9 +315,10 @@
 █████████████████ 17 🇩🇪 🇪🇸
 █████████████ 13 🇮🇹
 ████████████ 12 🇰🇷
-███████ 7 🇷🇺 🇲🇽
-██████ 6 🇩🇰 🇮🇷 🇭🇰
-█████ 5 🇮🇳 🇨🇳 🇹🇷
+████████ 8 🇨🇳
+███████ 7 🇲🇽 🇷🇺
+██████ 6 🇭🇰 🇩🇰 🇮🇷
+█████ 5 🇹🇷 🇮🇳
 ████ 4 🇸🇪
 ███ 3 🇵🇱 🇧🇪 🇮🇪 🇨🇱
 ██ 2 🇹🇭 🇦🇷 🇮🇸 🇿🇦
@@ -386,11 +387,11 @@
 1999: ███████████████████ 19
 2000: █████████████████ 17
 2001: ██████████████ 14
-2002: ███████████████ 15
+2002: ████████████████ 16
 2003: █████████████████████ 21
-2004: ███████████████████████████ 27
+2004: ████████████████████████████ 28
 2005: ███████████████████████ 23
-2006: ███████████████████████████ 27
+2006: ████████████████████████████ 28
 2007: ███████████████████████ 23
 2008: █████████████████████████████ 29
 2009: ███████████████████████████ 27
@@ -410,7 +411,7 @@
 2023: ██████████████████████████████████████████████████████████ 58
 2024:  0
 
-total: 1017</pre>
+total: 1020</pre>
 </details>
 </span><h2 class="heading-element">Mon top 15 films préférés</h2>
 <a id="user-content-mon-top-15-films-préférés" class="anchor" aria-label="Permalink: Mon top 15 films préférés" href="#mon-top-15-films-pr%C3%A9f%C3%A9r%C3%A9s"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -1486,6 +1487,7 @@ total: 1017</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//2ArWjhsbLW0K4ThJKS9L7ioQmFB.jpg");' onmouseleave='setPosterPath("");'>Frida 🇲🇽</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//riVXh3EimGO0y5dgQxEWPRy5Itg.jpg");' onmouseleave='setPosterPath("");'>Insomnia (Christopher Nolan, Al Pacino) #thriller</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gix9thDBXfjJ8M7rYbihqbQGBcP.jpg");' onmouseleave='setPosterPath("");'>Infernal Affairs 🇭🇰 #thriller</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//wD7D0B9U9ooanxyhtgLKaqM7www.jpg");' onmouseleave='setPosterPath("");'>Hero (Zhang Yimou) 🇨🇳</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aP8swke3gmowbkfZ6lmNidu0y9p.jpg");' onmouseleave='setPosterPath("");'>The Bourne Identity (Matt Damon) #thriller</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//lemqKtcCuAano5aqrzxYiKC8kkn.jpg");' onmouseleave='setPosterPath("");'>Gangs of New York (Martin Scorsese, Daniel Day-Lewis) : quelques scènes mémorables mais longuet et oubliable dans son ensemble</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//7BabiNfuSycl58M9Cgl3Nf97n1F.jpg");' onmouseleave='setPosterPath("");'>Panic Room (David Fincher) #thriller</li>
@@ -1551,6 +1553,7 @@ total: 1017</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//yYcV5jtIKPgSColm8aNRERILX9F.jpg");' onmouseleave='setPosterPath("");'>Aviator (Martin Scorsese)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//fF2w2A1yKd7s4M40MGDiTbpMd7H.jpg");' onmouseleave='setPosterPath("");'>Carnets de voyage (Diarios de motocicleta) (Gael García Bernal) 🇦🇷🇨🇱🇵🇪</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//exbyTbrvRUDKN2mcNEuVor4VFQW.jpg");' onmouseleave='setPosterPath("");'>Crazy Kung-Fu (Stephen Chow) 🇭🇰</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8eofm4YFoaQ79CavT1l8jo4hiGX.jpg");' onmouseleave='setPosterPath("");'>Le Secret des Poignards Volants (Zhang Yimou) 🇨🇳</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//rRioqT2wQgIgcMASYWv3D0rUMH2.jpg");' onmouseleave='setPosterPath("");'>La Chute 🇩🇪 #ww2</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//cALApskQS4kNJjiKxb1tnjFzNjL.jpg");' onmouseleave='setPosterPath("");'>Troie (Brad Pitt)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//v9f9MMrq2nGQrN7cHnQRmEq9lSE.jpg");' onmouseleave='setPosterPath("");'>The Passion of the Christ (Mel Gibson) (vu ?)</li>
@@ -1618,6 +1621,7 @@ total: 1017</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aPjBQzhOuQq0NK2LWqj6JL9BpaV.jpg");' onmouseleave='setPosterPath("");'>Le Prestige (Christopher Nolan) #film-à-énigme</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//v08RH5Cx9EFAQMBWQuE5jHAgHYs.jpg");' onmouseleave='setPosterPath("");'>The Queen (Stephen Frears) 🇬🇧 🎥</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//nT97ifVT2J1yMQmeq20Qblg61T.jpg");' onmouseleave='setPosterPath("");'>Les Infiltrés (The Departed) (Martin Scorsese, Matt Damon, Leonardo DiCaprio) 🏆</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aFtLwGv6pcqO72M1v5iQYZOCkZ5.jpg");' onmouseleave='setPosterPath("");'>La Cité Interdite (Zhang Yimou) 🇨🇳</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//mTtgpH6UnHUtD8moRJUzfGLOZTj.jpg");' onmouseleave='setPosterPath("");'>Le Dernier Roi d'Ecosse (Forest Whitaker)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//zzbVtj7qSVLig1sEgGDXJDPhaXF.jpg");' onmouseleave='setPosterPath("");'>This is England 🇬🇧</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//yuJtEgVZ9TCWaOSN41hcMiCdz26.jpg");' onmouseleave='setPosterPath("");'>Thank You for Smoking (Jason Reitman)</li>
@@ -2586,19 +2590,6 @@ total: 1017</pre>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//hLloiElMWdB6c7WxM4OZhDhs2d4.jpg");' onmouseleave='setPosterPath("");'><a href="https://www.rottentomatoes.com/celebrity/akirakurosawa" rel="noopener" target="_blank">Akira Kurosawa</a></li>
 <li><a href="https://www.rottentomatoes.com/celebrity/takeshi_kitano" rel="noopener" target="_blank">Takeshi Kitano</a></li>
-</ul>
-<div class="markdown-heading">
-<h3 class="heading-element" id="zhang-yimou-artsmartiaux-chinois">
-<a href="https://www.rottentomatoes.com/celebrity/zhang_yimou" rel="noopener" target="_blank">Zhang Yimou</a> (arts-martiaux chinois) <a href="#top">↑</a>
-</h3>
-<a id="user-content-zhang-yimou-arts-martiaux-chinois" class="anchor" aria-label="Permalink: Zhang Yimou (arts-martiaux chinois)" href="#zhang-yimou-arts-martiaux-chinois"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-</div>
-<ul>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//wD7D0B9U9ooanxyhtgLKaqM7www.jpg");' onmouseleave='setPosterPath("");'>Hero</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aFtLwGv6pcqO72M1v5iQYZOCkZ5.jpg");' onmouseleave='setPosterPath("");'>La Cité Interdite</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8eofm4YFoaQ79CavT1l8jo4hiGX.jpg");' onmouseleave='setPosterPath("");'>Le Secret des Poignards Volants</li>
-<li>pas vu: <a href="https://www.telerama.fr/cinema/films/epouses-et-concubines,8965.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/epouses-et-concubines,8965.php</a>
-</li>
 </ul>
 <p><a href="#sommaire">⬆️ retour sommaire</a></p>
 
