--- a/index.html
+++ b/index.html
@@ -310,19 +310,19 @@
 <span><details>
   <summary>Statistiques: films vu par pays</summary>
   (n'inclut pas les films américains et français, vus en grand nombre)
-  <pre style="font-size: 20px;line-height: 32px;">████████████████████████████████████ 36 🇬🇧
+  <pre style="font-size: 20px;line-height: 32px;">█████████████████████████████████████ 37 🇬🇧
 ███████████████████████████ 27 🇯🇵
 █████████████████ 17 🇩🇪 🇪🇸
 █████████████ 13 🇮🇹
 ████████████ 12 🇰🇷
 ████████ 8 🇨🇳
 ███████ 7 🇲🇽 🇷🇺
-██████ 6 🇭🇰 🇩🇰 🇮🇷
-█████ 5 🇹🇷 🇮🇳
+██████ 6 🇩🇰 🇭🇰 🇮🇷
+█████ 5 🇮🇳 🇹🇷
 ████ 4 🇸🇪
-███ 3 🇵🇱 🇧🇪 🇮🇪 🇨🇱
-██ 2 🇹🇭 🇦🇷 🇮🇸 🇿🇦
-█ 1 🇳🇴 🇰🇿 🇧🇷 🇫🇮 🇮🇱 🇬🇷 🇨🇦 🇮🇩 🇬🇪 🇳🇿 🇦🇺 🇸🇬 🇱🇧 🇦🇹 🇸🇳 🇧🇹 🇺🇾 🇵🇪 🇷🇴 🇨🇴</pre>
+███ 3 🇧🇪 🇨🇱 🇮🇪 🇵🇱
+██ 2 🇦🇷 🇮🇱 🇮🇸 🇹🇭 🇿🇦
+█ 1 🇦🇹 🇦🇺 🇧🇷 🇧🇹 🇨🇦 🇨🇴 🇫🇮 🇬🇪 🇬🇷 🇮🇩 🇰🇿 🇱🇧 🇳🇴 🇳🇿 🇵🇪 🇷🇴 🇸🇬 🇸🇳 🇺🇾</pre>
 </details>
 </span><span><details>
   <summary>Statistiques: films vu par année</summary>
@@ -387,10 +387,10 @@
 1999: ███████████████████ 19
 2000: █████████████████ 17
 2001: ██████████████ 14
-2002: ████████████████ 16
+2002: █████████████████ 17
 2003: █████████████████████ 21
 2004: ████████████████████████████ 28
-2005: ███████████████████████ 23
+2005: ████████████████████████ 24
 2006: ████████████████████████████ 28
 2007: ███████████████████████ 23
 2008: █████████████████████████████ 29
@@ -409,9 +409,9 @@
 2021: ████████████████████████ 24
 2022: ████████████████████████████████ 32
 2023: ██████████████████████████████████████████████████████████ 58
-2024:  0
+2024: ██ 2
 
-total: 1020</pre>
+total: 1024</pre>
 </details>
 </span><h2 class="heading-element">Mon top 15 films préférés</h2>
 <a id="user-content-mon-top-15-films-préférés" class="anchor" aria-label="Permalink: Mon top 15 films préférés" href="#mon-top-15-films-pr%C3%A9f%C3%A9r%C3%A9s"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -1052,7 +1052,7 @@ total: 1020</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//m3mmFkPQKvPZq5exmh0bDuXlD9T.jpg");' onmouseleave='setPosterPath("");'>Platoon (Oliver Stone, Charlie Sheen, Christopher Walken) #film-de-guerre</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//9LTQNCvoLsKXP0LtaKAaYVtRaQL.jpg");' onmouseleave='setPosterPath("");'>Ferris Bueller's Day Off #teen-movie</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8aNGnEsvLBldNvaBkfYkGGgZDhe.jpg");' onmouseleave='setPosterPath("");'>'Round Midnight (Bertrand Tavernier) #jazz : belle musique mais pas vraiment d'histoire</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8gZWMhJHRvaXdXsNhERtqNHYpH3.jpg");' onmouseleave='setPosterPath("");'>The Fly (David Cronenberg) #nanar #so-bad-its-good</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8gZWMhJHRvaXdXsNhERtqNHYpH3.jpg");' onmouseleave='setPosterPath("");'>The Fly (David Cronenberg) #nanar #so-bad-its-good 🪰</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/12e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar" rel="noopener" target="_blank">Césars 12</a></p>
 <ul>
@@ -1488,6 +1488,7 @@ total: 1020</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//riVXh3EimGO0y5dgQxEWPRy5Itg.jpg");' onmouseleave='setPosterPath("");'>Insomnia (Christopher Nolan, Al Pacino) #thriller</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gix9thDBXfjJ8M7rYbihqbQGBcP.jpg");' onmouseleave='setPosterPath("");'>Infernal Affairs 🇭🇰 #thriller</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//wD7D0B9U9ooanxyhtgLKaqM7www.jpg");' onmouseleave='setPosterPath("");'>Hero (Zhang Yimou) 🇨🇳</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ifMgDAUXVQLY4DeOu3VTTi55jSP.jpg");' onmouseleave='setPosterPath("");'>The Count of Monte Cristo 🎥</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aP8swke3gmowbkfZ6lmNidu0y9p.jpg");' onmouseleave='setPosterPath("");'>The Bourne Identity (Matt Damon) #thriller</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//lemqKtcCuAano5aqrzxYiKC8kkn.jpg");' onmouseleave='setPosterPath("");'>Gangs of New York (Martin Scorsese, Daniel Day-Lewis) : quelques scènes mémorables mais longuet et oubliable dans son ensemble</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//7BabiNfuSycl58M9Cgl3Nf97n1F.jpg");' onmouseleave='setPosterPath("");'>Panic Room (David Fincher) #thriller</li>
@@ -1576,6 +1577,7 @@ total: 1020</pre>
 </div>
 <p><a href="https://fr.wikipedia.org/wiki/78e_c%C3%A9r%C3%A9monie_des_Oscars#Meilleur_film" rel="noopener" target="_blank">Oscars 78</a></p>
 <ul>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//sGjIvtVvTlWnia2zfJfHz81pZ9Q.jpg");' onmouseleave='setPosterPath("");'>Pride &amp; Prejudice 🇬🇧 🎥 ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//dPyWMlQd54r3pK17GKG3iqjvNZ7.jpg");' onmouseleave='setPosterPath("");'>The New World (Terrence Malick, Christian Bale, Colin Farrell) 🎥 ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//isb2Qow76GpqYmsSyfdMfsYAjts.jpg");' onmouseleave='setPosterPath("");'>Les Noces funèbres (Tim Burton) ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//uHOEb6mo45qMSJaZqbkVa7oW1Y7.jpg");' onmouseleave='setPosterPath("");'>Trois Enterrements (Tommy Lee Jones) 🌿 #neowestern</li>
@@ -1598,7 +1600,7 @@ total: 1020</pre>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/31e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 31</a></p>
 <ul>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kc1GnNnFH99VWoSCQwPQ9ZslU4t.jpg");' onmouseleave='setPosterPath("");'>Va, vis et deviens</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kc1GnNnFH99VWoSCQwPQ9ZslU4t.jpg");' onmouseleave='setPosterPath("");'>Va, vis et deviens 🇮🇱</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gh3e2LA6tUIKh6H93GvGQgSVViD.jpg");' onmouseleave='setPosterPath("");'>Le Petit Lieutenant (Xavier Beauvois) <a href="https://www.telerama.fr/cinema/films/le-petit-lieutenant,236483.php" rel="noopener" target="_blank">📰</a> : film policier touchant, réaliste et bien documenté</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//o9xJ1xG1WKlHkl8ACqq0LShOuMu.jpg");' onmouseleave='setPosterPath("");'>La Marche de l'empereur</li>
 </ul>
@@ -2314,6 +2316,10 @@ total: 1020</pre>
 <a id="user-content-2024" class="anchor" aria-label="Permalink: 2024" href="#2024"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </div>
 <p><a href="https://editorial.rottentomatoes.com/guide/best-movies-of-2024/" rel="noopener" target="_blank">Rotten Tomatoes – Top Movies of 2024</a></p>
+<ul>
+<li>bof: Love Lies Bleeding, <del>Monkey Man</del>
+</li>
+</ul>
 <p><a href="#sommaire">⬆️ retour sommaire</a></p>
 <div class="markdown-heading">
 <h2 class="heading-element" id="films-par-genrethème">Films par genre/thème <a href="#top">↑</a>
@@ -2407,7 +2413,7 @@ total: 1020</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//971Kqs1q4nuSc9arn1QAuKYbfxy.jpg");' onmouseleave='setPosterPath("");'>Scream (2022)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//kdPMUMJzyYAc4roD52qavX0nLIC.jpg");' onmouseleave='setPosterPath("");'>Talk to Me (2023) ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//dqtAOLQ8KqAYoZckYY9j99NNr9K.jpg");' onmouseleave='setPosterPath("");'>You'll Never Find Me (2023) ❤️</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//u3YQJctMzFN2wAvnkmXy41bXhFv.jpg");' onmouseleave='setPosterPath("");'>Late Night with the Devil (2023)</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//u3YQJctMzFN2wAvnkmXy41bXhFv.jpg");' onmouseleave='setPosterPath("");'>Late Night with the Devil (2023) ❤️</li>
 </ul>
 <p><a href="https://loadingartist.com/comic/horror-movie/" rel="noopener" target="_blank">bonus: gag</a></p>
 <div class="markdown-heading">
