--- a/index.html
+++ b/index.html
@@ -310,19 +310,19 @@
 <span><details>
   <summary>Statistiques: films vu par pays</summary>
   (n'inclut pas les films américains et français, vus en grand nombre)
-  <pre style="font-size: 20px;line-height: 32px;">███████████████████████████████████████ 39 🇬🇧
+  <pre style="font-size: 20px;line-height: 32px;">█████████████████████████████████████████ 41 🇬🇧
 ███████████████████████████ 27 🇯🇵
-█████████████████ 17 🇩🇪 🇪🇸
+██████████████████ 18 🇩🇪
+█████████████████ 17 🇪🇸
 █████████████ 13 🇮🇹
 ████████████ 12 🇰🇷
 ████████ 8 🇨🇳
 ███████ 7 🇲🇽 🇷🇺
-██████ 6 🇩🇰 🇭🇰 🇮🇷
+██████ 6 🇩🇰 🇭🇰 🇮🇷 🇸🇪
 █████ 5 🇮🇳 🇹🇷
-████ 4 🇸🇪
 ███ 3 🇦🇺 🇧🇪 🇨🇱 🇮🇪 🇵🇱 🇿🇦
 ██ 2 🇦🇷 🇮🇱 🇮🇸 🇹🇭
-█ 1 🇦🇹 🇧🇷 🇧🇹 🇨🇦 🇨🇴 🇫🇮 🇬🇪 🇬🇷 🇮🇩 🇰🇿 🇱🇧 🇳🇴 🇳🇿 🇵🇪 🇷🇴 🇸🇬 🇸🇳 🇺🇾</pre>
+█ 1 🇦🇹 🇧🇷 🇧🇹 🇨🇦 🇨🇴 🇫🇮 🇬🇪 🇬🇷 🇮🇩 🇰🇿 🇱🇧 🇳🇴 🇳🇿 🇵🇪 🇷🇴 🇷🇸 🇸🇬 🇸🇳 🇺🇾</pre>
 </details>
 </span><span><details>
   <summary>Statistiques: films vu par année</summary>
@@ -459,7 +459,7 @@ total: 1024</pre>
 <a id="user-content-1922" class="anchor" aria-label="Permalink: 1922" href="#1922"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </div>
 <ul>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gVjHF375pdFANPMXUT3aJxoOi0J.jpg");' onmouseleave='setPosterPath("");'>Nosferatu (Murnau) #vampires</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gVjHF375pdFANPMXUT3aJxoOi0J.jpg");' onmouseleave='setPosterPath("");'>Nosferatu (Murnau) 🇩🇪 #vampires</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="1927">1927 <a href="#top">↑</a>
@@ -583,7 +583,7 @@ total: 1024</pre>
 <a id="user-content-1957" class="anchor" aria-label="Permalink: 1957" href="#1957"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </div>
 <ul>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//wcZ21zrOsy0b52AfAF50XpTiv75.jpg");' onmouseleave='setPosterPath("");'>The Seventh Seal (Ingmar Bergman) #fantastique</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//wcZ21zrOsy0b52AfAF50XpTiv75.jpg");' onmouseleave='setPosterPath("");'>The Seventh Seal (Ingmar Bergman) 🇸🇪 #fantastique</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ow3wq89wM8qd5X7hWKxiRfsFf9C.jpg");' onmouseleave='setPosterPath("");'>12 Hommes en Colère (Sidney Lumet) #film-de-procès</li>
 </ul>
 <div class="markdown-heading">
@@ -641,7 +641,7 @@ total: 1024</pre>
 </div>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//2o1oe54a4doiwB4uJq9Kx1RHal0.jpg");' onmouseleave='setPosterPath("");'>Le Procès (Orson Welles) 🎥 ❤️ #film-de-procès</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//mhCYpRMtvCxxu8UsCKHWCTcTpcX.jpg");' onmouseleave='setPosterPath("");'>Lawrence d'Arabie (David Lean, avec Peter O'Toole) #aventure</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//mhCYpRMtvCxxu8UsCKHWCTcTpcX.jpg");' onmouseleave='setPosterPath("");'>Lawrence d'Arabie (David Lean, avec Peter O'Toole) 🇬🇧 #aventure</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//muCMEJrYw6B06Zttn879nYtCGvS.jpg");' onmouseleave='setPosterPath("");'>Le Jour le plus long (John Wayne, Robert Mitchum, Richard Burton, Henry Fonda, Bourvil) #ww2</li>
 <li>bof: Lolita (Stanley Kubrick)</li>
 </ul>
@@ -713,7 +713,7 @@ total: 1024</pre>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//bSAjzamTUzm6wuP36aYRma0d5jZ.jpg");' onmouseleave='setPosterPath("");'>Le Bon, la Brute et le Truand (Sergio Leone, Clint Eastwood) 🎥 💙 #western-spaghetti</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//nfnlTw613z9tNm0Uur8Tg3g5L1R.jpg");' onmouseleave='setPosterPath("");'>Le Deuxième Souffle (Jean-Pierre Melville) <a href="https://www.telerama.fr/cinema/films/le-deuxieme-souffle,17484.php" rel="noopener" target="_blank">📰</a> #policier : pas mauvais mais longuet</li>
-<li>bof: Persona (Ingmar Bergman), Blow-Up, Le Roi de Coeur (Philippe de Broca)</li>
+<li>bof: Persona (Ingmar Bergman) 🇸🇪, Blow-Up 🇬🇧, Le Roi de Coeur (Philippe de Broca)</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="1967">1967 <a href="#top">↑</a>
@@ -1282,7 +1282,7 @@ total: 1024</pre>
 <p><a href="https://fr.wikipedia.org/wiki/68e_c%C3%A9r%C3%A9monie_des_Oscars#Palmar%C3%A8s" rel="noopener" target="_blank">Oscars 68</a></p>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aCBrhOQjhG397GLkEZ49zReQEKX.jpg");' onmouseleave='setPosterPath("");'>The Bridges of Madison County (Clint Eastwood, Meryl Streep) ❤️</li>
-<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//9dCCM0kTNpipDzSHdYfsRBlvwH.jpg");' onmouseleave='setPosterPath("");'>Underground (Emir Kusturica) ✨ 🌿 ❤️ <a href="https://www.telerama.fr/cinema/films/underground,37761.php" rel="noopener" target="_blank">📰</a>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//9dCCM0kTNpipDzSHdYfsRBlvwH.jpg");' onmouseleave='setPosterPath("");'>Underground (Emir Kusturica) 🇷🇸 ✨ 🌿 ❤️ <a href="https://www.telerama.fr/cinema/films/underground,37761.php" rel="noopener" target="_blank">📰</a>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//99X2SgyFunJFXGAYnDv3sb9pnUD.jpg");' onmouseleave='setPosterPath("");'>Usual Suspects (Kevin Spacey) #thriller</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//h7904tdTu4O6EVX4UyesxtqF0xR.jpg");' onmouseleave='setPosterPath("");'>Seven (David Fincher) #thriller</li>
@@ -2416,6 +2416,9 @@ total: 1024</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//u3YQJctMzFN2wAvnkmXy41bXhFv.jpg");' onmouseleave='setPosterPath("");'>Late Night with the Devil (2023) ❤️</li>
 </ul>
 <p><a href="https://loadingartist.com/comic/horror-movie/" rel="noopener" target="_blank">bonus: gag</a></p>
+<ul>
+<li>bof: Vermines (2023)</li>
+</ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="aventure-et-divertissement-familial">Aventure et divertissement familial <a href="#top">↑</a>
 </h3>
